Setup entry point for the application

--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-	<title></title>
+	<title>BeerCalc</title>
 </head>
 <body>
-	<script type='text/javascript' src='bundle.js' charset="utf-8"></script>
+	<div id="root">
+		<script type='text/javascript' src='bundle.js' charset="utf-8"></script>
+	</div>
 </body>
 </html>
